--- a/github/workflows/wafa.yml
+++ b/github/workflows/wafa.yml
@@ -1,7 +1,7 @@
 name: WAFA Scraper
 
 on:
-  workflow_dispatch:  # Allow manual trigger
+  workflow_dispatch:      # Allows manual trigger from GitHub UI
   schedule:
     - cron: '0 8 * * *'  # Runs every day at 08:00 UTC
 
@@ -16,15 +16,18 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'  # Or your preferred version
+          python-version: '3.10'
 
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 pandas
+          pip install requests beautifulsoup4 pandas jupyter nbconvert
+
+      - name: Convert notebook to Python script
+        run: jupyter nbconvert --to script wafa-autoscrapper.ipynb
 
       - name: Run WAFA scraper
-        run: python wafa-autoscrapper.ipynb  # <-- Replace with your script filename
+        run: python wafa-autoscrapper.py
 
       - name: Commit and push changes
         run: |
