--- a/.github/workflows/wafa.yml
+++ b/.github/workflows/wafa.yml
@@ -1,9 +1,9 @@
 name: WAFA Scraper
 
 on:
-  workflow_dispatch:      # Allows manual trigger from GitHub UI
+  workflow_dispatch:
   schedule:
-    - cron: '0 8 * * *'  # Runs every day at 08:00 UTC
+    - cron: '*/5 * * * *'  # Runs every 5 minutes
 
 jobs:
   build:
