--- a/.github/workflows/wafa.yml
+++ b/.github/workflows/wafa.yml
@@ -1,9 +1,9 @@
 name: WAFA Scraper
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # Allows manual trigger
   schedule:
-    - cron: '*/5 * * * *'  # Runs every 5 minutes
+    - cron: '0 */6 * * *'  # Runs every 6 hours (UTC)
 
 jobs:
   build:
